--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,59 +3,59 @@
 
 /** Ionic CSS Variables **/
 :root {
-  --ion-color-primary: #00c9a7;
-  --ion-color-primary-rgb: 0, 201, 167;
+  --ion-color-primary: #8685ef;
+  --ion-color-primary-rgb: 134, 133, 239;
   --ion-color-primary-contrast: #000000;
   --ion-color-primary-contrast-rgb: 0, 0, 0;
-  --ion-color-primary-shade: #00b193;
-  --ion-color-primary-tint: #1aceb0;
+  --ion-color-primary-shade: #7675d2;
+  --ion-color-primary-tint: #9291f1;
 
-  --ion-color-secondary: #66d79b;
-  --ion-color-secondary-rgb: 102, 215, 155;
+  --ion-color-secondary: #9e9dff;
+  --ion-color-secondary-rgb: 158, 157, 255;
   --ion-color-secondary-contrast: #000000;
   --ion-color-secondary-contrast-rgb: 0, 0, 0;
-  --ion-color-secondary-shade: #5abd88;
-  --ion-color-secondary-tint: #75dba5;
+  --ion-color-secondary-shade: #8b8ae0;
+  --ion-color-secondary-tint: #a8a7ff;
 
-  --ion-color-tertiary: #9ce492;
-  --ion-color-tertiary-rgb: 156, 228, 146;
+  --ion-color-tertiary: #c6c0f8;
+  --ion-color-tertiary-rgb: 198, 192, 248;
   --ion-color-tertiary-contrast: #000000;
   --ion-color-tertiary-contrast-rgb: 0, 0, 0;
-  --ion-color-tertiary-shade: #89c980;
-  --ion-color-tertiary-tint: #a6e79d;
+  --ion-color-tertiary-shade: #aea9da;
+  --ion-color-tertiary-tint: #ccc6f9;
 
-  --ion-color-success: #2dd36f;
-  --ion-color-success-rgb: 45, 211, 111;
+  --ion-color-success: #00c896;
+  --ion-color-success-rgb: 0, 200, 150;
   --ion-color-success-contrast: #000000;
   --ion-color-success-contrast-rgb: 0, 0, 0;
-  --ion-color-success-shade: #28ba62;
-  --ion-color-success-tint: #42d77d;
+  --ion-color-success-shade: #00b084;
+  --ion-color-success-tint: #1acea1;
 
-  --ion-color-warning: #ffc409;
-  --ion-color-warning-rgb: 255, 196, 9;
+  --ion-color-warning: #ffa184;
+  --ion-color-warning-rgb: 255, 161, 132;
   --ion-color-warning-contrast: #000000;
   --ion-color-warning-contrast-rgb: 0, 0, 0;
-  --ion-color-warning-shade: #e0ac08;
-  --ion-color-warning-tint: #ffca22;
+  --ion-color-warning-shade: #e08e74;
+  --ion-color-warning-tint: #ffaa90;
 
-  --ion-color-danger: #eb445a;
-  --ion-color-danger-rgb: 235, 68, 90;
+  --ion-color-danger: #b02b36;
+  --ion-color-danger-rgb: 176, 43, 54;
   --ion-color-danger-contrast: #ffffff;
   --ion-color-danger-contrast-rgb: 255, 255, 255;
-  --ion-color-danger-shade: #cf3c4f;
-  --ion-color-danger-tint: #ed576b;
+  --ion-color-danger-shade: #9b2630;
+  --ion-color-danger-tint: #b8404a;
 
-  --ion-color-medium: #a0acbd;
-  --ion-color-medium-rgb: 160, 172, 189;
+  --ion-color-medium: #aca9bb;
+  --ion-color-medium-rgb: 172, 169, 187;
   --ion-color-medium-contrast: #000000;
   --ion-color-medium-contrast-rgb: 0, 0, 0;
-  --ion-color-medium-shade: #8d97a6;
-  --ion-color-medium-tint: #aab4c4;
+  --ion-color-medium-shade: #9795a5;
+  --ion-color-medium-tint: #b4b2c2;
 
-  --ion-color-light: #ffffff;
-  --ion-color-light-rgb: 255, 255, 255;
+  --ion-color-light: #f4f5f8;
+  --ion-color-light-rgb: 244, 245, 248;
   --ion-color-light-contrast: #000000;
   --ion-color-light-contrast-rgb: 0, 0, 0;
-  --ion-color-light-shade: #e0e0e0;
-  --ion-color-light-tint: #ffffff;
+  --ion-color-light-shade: #d7d8da;
+  --ion-color-light-tint: #f5f6f9;
 }
