--- a/src/app/pages/list-search/list-search.component.scss
+++ b/src/app/pages/list-search/list-search.component.scss
@@ -39,10 +39,21 @@ ion-card {
   box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
-.b-radius-50 {
-  border-radius: 50%;
+.ta-center {
+  text-align: center;
 }
 
+.fd-column {
+  flex-direction: column;
+}
+
+.m-0-auto {
+  margin: 0 auto;
+}
+
+.m-0 {
+  margin: 0;
+}
 ion-button {
   --color: var(--ion-color-light);
 
