--- a/src/app/pages/list-types/list-types.component.html
+++ b/src/app/pages/list-types/list-types.component.html
@@ -1,11 +1,16 @@
 <ion-header class="pt-initial">
-  <ion-toolbar translucent class="ta-left">
-    <ion-title class="tt-none">Cards by types</ion-title>
-  </ion-toolbar>
+  <ion-progress-bar *ngIf="!docRead" type="indeterminate"></ion-progress-bar>
 </ion-header>
 
 <ion-content>
   <ion-grid class="ion-align-items-center">
+    <ion-row class="ml-5">
+      <ion-col size="12">
+        <ion-text color="primary">
+          <h1><b> Search for a card by type </b></h1>
+        </ion-text>
+      </ion-col>
+    </ion-row>
     <ion-row>
       <ion-col size-lg="4" size-md="4" size-sm="6" *ngFor="let type of types">
         <ion-card>
