--- a/src/app/pages/list-search/list-search.component.html
+++ b/src/app/pages/list-search/list-search.component.html
@@ -2,7 +2,7 @@
   <ion-progress-bar *ngIf="!docRead" type="indeterminate"></ion-progress-bar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <ion-grid class="ion-align-items-center">
     <ion-row class="ml-5">
       <ion-col size="12">
@@ -51,5 +51,11 @@
         </ion-card>
       </ion-col>
     </ion-row>
+    <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
+      <ion-infinite-scroll-content
+        loadingText="Loading..."
+        loadingSpinner="bubbles"
+      ></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
   </ion-grid>
 </ion-content>
