--- a/src/app/pages/list-types/list-types.component.scss
+++ b/src/app/pages/list-types/list-types.component.scss
@@ -50,6 +50,12 @@ ion-button {
     rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
+@media (min-width: 993px) and (max-width: 1660px) {
+  ion-grid {
+    width: 80%;
+  }
+}
+
 @media screen and (max-width: 992px) {
   ion-grid {
     width: 100%;
