:recycle: refactor: Melhoria da busca

--- a/src/app/pages/list-search/list-search.component.html
+++ b/src/app/pages/list-search/list-search.component.html
@@ -44,7 +44,7 @@
           </div>
 
           <div class="d-flex jc-center mt-10 mb-10">
-            <ion-button shape="round">
+            <ion-button shape="round" (click)="openModal(card.id)">
               View More <ion-icon name="add-outline"></ion-icon>
             </ion-button>
           </div>
